tests/paczka1/fuzzy1/57075411.err
Error in line 1: tgwgJ2 A787 11,0
Error in line 8: tgwgJ2 A787 63,0
Error in line 17: IuxaqESc S245 340,3
Error in line 30: sBcCNlYhjLz S24: 0,0
Error in line 23: IuxaqESc S117 97,5
Error in line 21: A787 A787 147,4
